@@ -21,7 +21,6 @@ TECH
    *. keep reviewing and updating the GameOverview.html doc
    
 NON-TECH
-   *. Test TaxiBehavior
    *. Have Unlock automatically send an open message if it succeeds. Have Lock automatically close first, if possible.
    *. Classes with insufficient unique skills: Charlatan (7), Alterer (9), Illusionist (10),  Ranger (11), Alterer (11), Evoker (11), Assassin (12), Paladin (12), 
    *. A fireball type chant for Delvers or something, like Magma Cannon or Core Spike.
