@@ -2182,7 +2182,7 @@ Targets    : MOBs, Items, Rideables\n\r\
 Parameters : [ALL PRICE]/[AREA/ROOM]=[PRICE]/[PARAM]=[VALUE]; ... ; \n\r\
 Example    : 1.5\n\r\
 Example    : Midgaard#3001=1.5; Smurfville=2.0; 70 ; AREAONLY=true\n\r\
-Example    : Midgaard#3032; 100 ; AREAONLY=false; MAXRANGE=100\n\r\
+Example    : Midgaard#3032; 100 ; INDOOROK=false; MAXRANGE=100\n\r\
 Description: \n\r\
 This behavior makes the mob a carrier of players to places.  The mob will charge for his services if you specify \
 a price in the parameters, or he will do it for free if you don't, or if the last price \
@@ -2196,7 +2196,8 @@ rooms away from the taxi that is known.  GREETING=message will give a special ta
 greeting message for all players who enter the room its in. ENTERMSG will give a message \
 to players after they mount the taxi.  TALKERNAME=name will change the apparent \
 name of the speaker, allowing you to turn a mounted mob into a "driver" if you wish. \
-PERROOM=number will set a per-room price for the distance from the current room to the one sought.
+PERROOM=number will set a per-room price for the distance from the current room to the one sought. \
+INDOOROK=true will allow the taxi to traverse indoor rooms if convient.
 
 BEHAVIOR_VAGRANT=\
 Behavior   : Vagrant\n\r\
